@@ -1,3 +1,7 @@
+2021-09-27 Danilo Chang
+
+	* Implement command: warpPolar
+
 2021-09-26 Danilo Chang
 
 	* Implement command: fillPoly, CLAHE, EMD, SVDecomp, SVBackSubst
